スライドショーを狭めた。

--- a/about.html
+++ b/about.html
@@ -45,10 +45,11 @@
           <ul>
             <li><a href="#" class="scroll">ページトップ</a></li>
             <li><a href="#article1" class="scroll">伊藤先生メッセージ</a></li>
-            <li><a href="#article2" class="scroll">実行委員より</a></li>
-            <li><a href="#article3" class="scroll">会の概要・目的</a></li>
-            <li><a href="#article4" class="scroll">スケジュール(案)</a></li>
-            <li><a href="#article5" class="scroll">みらいらぼの紹介</a></li>
+            <li><a href="#article2" class="scroll">現地コーディネーターより</a></li>
+            <li><a href="#article3" class="scroll">実行委員より</a></li>
+            <li><a href="#article4" class="scroll">会の概要・目的</a></li>
+            <li><a href="#article5" class="scroll">スケジュール(案)</a></li>
+            <li><a href="#article6" class="scroll">みらいらぼの紹介</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -75,9 +76,15 @@
           <section id="article1">
             <h3>伊藤先生メッセージ</h3>
             <section class="comment_item">
-              <div class="item_img"><img src="Pictures/noimage3.gif" alt="写真"></div>
+              <div class="row">
+                  <div class="col-md-6 col-sm-6">
+                  <img src="Pictures/Person/takayuki201204.jpg" alt="写真" class="img-responsive">
+                </div>
+                <div class="col-md-6 col-sm-6">
+                  <h5 class="Emphasis3"><span>名古屋工業大学</span><br>伊藤 孝行</h5>
+                </div>
+              </div>
               <div class="item_txt">
-                  <h2 class="ttl"><span>名古屋工業大学</span><br>伊藤 孝行</h2>
                   <h5 class="MessageContent">所属</h5>
                   <br><br>
                   <p class="txt">
@@ -104,11 +111,36 @@
           </section>
 
           <section id="article2">
+            <h3>現地コーディネーターより</h3>
+            <section class="comment_item">
+              <div class="row">
+                  <div class="col-md-6 col-sm-6">
+                    <img src="Pictures/noimage3.gif" alt="写真">
+                </div>
+                <div class="col-md-6 col-sm-6">
+                  <h5 class="Emphasis3"><span>所属</span><br>名前</h5>
+                </div>
+              </div>
+              <div class="item_txt">
+                  <p class="txt">テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト<br>
+                      テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト <br>
+                      テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト
+                  </p>
+            </section>
+          </section>
+
+          <section id="article3">
             <h3>実行委員より</h3>
             <section class="comment_item">
-                    <div class="item_img"><img src="Pictures/Ikeda.jpg" alt="写真"></div>
-                    <div class="item_txt">
-                        <h2 class="ttl"><span>第2回研究会　実行委員長</span><br>池田　晃一</h2>
+              <div class="row">
+                <div class="col-md-6 col-sm-6">
+                    <img src="Pictures/Person/Ikeda.jpg" alt="写真">
+                </div>
+                <div class="col-md-6 col-sm-6">
+                  <h5 class="Emphasis3"><span>第2回研究会　実行委員長</span><br>池田　晃一</h5>
+                </div>
+              </div>
+              <div class="item_txt">
                         <h5 class="MessageContent">専門分野</h5>
                         <br><br>
                         <p class="txt">
@@ -138,7 +170,7 @@
             </section>
           </section>
 
-          <section id="article3">
+          <section id="article4">
             <h3>会の概要・目的</h3>
             <figure>
               <img src="Pictures/noimage2.jpg">
@@ -161,11 +193,11 @@
                 <br>
                 地域が抱える諸々の問題に対して「共通善」を掲げ、実践と抽象のバランスを意識しながら地域の方とともに取り組んでいくのが市民共創知研究会だといえます。
               </p>
-              <a href="Files/About/20170324_研究会のしおり.pdf">研究会のしおり</a>
+              <a href="Files/About/20170324_研究会のしおり.pdf" class="Link1">研究会のしおり</a>
             </figure>
           </section>
 
-          <section id="article4">
+          <section id="article5">
             <h3>スケジュール(案)</h3>
             <!-- 6月30日 -->
             <h4>6月30日(金)</h4>
@@ -173,7 +205,12 @@
               <div class="col-lg-12 col-md-12"><img src="Pictures/About/Timetable0630.jpg" alt="写真"></div>
             </div>
             <p>
-              フィールドワークの詳しい内容は<a>こちら</a>
+              <br>
+              フィールドワークの詳しい内容は
+              <a href="fieldWork.html" class="Link1">
+                こちら
+              </a>
+              <br><br>
             </p>
             <!-- ７月１日(土) -->
             <h4>7月1日(土)</h4>
@@ -185,15 +222,20 @@
             <div class="row" align="center">
               <div class="col-lg-12 col-md-12"><img class="single-Tt" src="Pictures/About/Timetable0702.jpg" alt="写真"></div>
             </div>
-            <a href="./Files/About/20170322_Timetable.pdf">タイムテーブルのpdf</a>
+            <a href="./Files/About/20170322_Timetable.pdf" class="Link1">タイムテーブルのpdf</a>
           </section>
 
-          <section id="article5">
+          <section id="article6">
             <h3>みらいらぼの紹介</h3>
-            <figure>
-              <img src="Pictures/noimage2.jpg">
-              <p></p>
-            </figure>
+            <div class="row" align="">
+              <div class="col-lg-12 col-md-12">
+                  <a href="https://mirai-making.herokuapp.com/">
+                    <img src="Pictures/About/MiraiLab.png" alt="写真">
+                  </a>
+                  <p>みらいらぼは、誰もが自分の夢を持ち、夢を実現できる世界を実現します。対話で多様な分野の人たちと関わることで夢を見つけ、みらいらぼで世界中の人たちの意見や知見を貰いながら、夢を実現を行います。</p>
+                  <p><a href="https://mirai-making.herokuapp.com/" class="Link1">みらいらぼ</a>へのリンク</p>
+              </div>
+            </div>
           </section>
         </article>
   </div>
