--- a/index.html
+++ b/index.html
@@ -45,8 +45,18 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a>エントリーフォーム</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
           </ul>
+          <!--
+          <ul class="nav navbar-nav navbar-right ExLink">
+            <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
+          </ul>
+        -->
+          <button type="button" class="btn btn-default navbar-btn navbar-right">
+            <a href="https://form.jotform.me/70938432366462">
+              原稿投稿
+            </a>
+          </button>
         </div>
 
         <!-- サイドメニュー開始 -->
@@ -74,7 +84,7 @@
     </div>
     <!-- パンくずリスト終了 -->
     <!-- スライドショー開始 -->
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <div id="carousel-example-generic" class="carousel slide center-block" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -133,7 +143,7 @@
         <ul>
           <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
           <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
-          <li><a href="https://mirailab-tushima.herokuapp.com/" target="_blank">みらいらぼ@対馬</a></li>
+          <li><a href="https://mirailab-tushima.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
         </ul>
 
         <h3>新着情報</h3>
@@ -179,19 +189,19 @@
     </div>
   </div>
     <!-- 主文終了 -->
-    <!-- フッター開始 -->
+  <!-- フッター開始 -->
     <nav class="navbar navbar-default navbar-fixed-bottom">
-	     <div class="container-fluid">
-          <center>
-		       <div class="navbar-brand footer">
-             <p>
-               Copyright © 2016 <a>JSAI SIG-CCI</a>. Some Rights Reserved.<br>
-                <a href="#" class="scroll" id="test" data-offset="50">トップに戻る</a>
-             </p>
-		      </div>
-        </center>
-	       </div>
-   </nav>
+      <div class="container-fluid">
+        <p class="navbar-text">
+          Copyright © 2016
+          <a>JSAI SIG-CCI</a>
+          Some Rights Reserved
+          <a href="#" class="scroll">
+            トップに戻る
+          </a>
+        </p>
+      </div>
+     </nav>
   <!-- フッター終了 -->
   </div>
   <!-- 通常画面終了 -->
