--- a/traffic.html
+++ b/traffic.html
@@ -31,6 +31,7 @@
             <li><a href="index.html">ホーム</a></li>
             <li><a href="about.html">研究会について</a></li>
             <li><a href="prepare.html">対馬についての予習</a></li>
+            <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
             <li><a>エントリーフォーム</a></li>
           </ul>
@@ -86,13 +87,13 @@
           <h4>時刻表、料金、のりば案内</h4>
             <div>
               <ul>
-                <li><a href="https://www.ana.co.jp/">ANA</a></li>
-                <li><a href="http://tsushima-airport.co.jp/">対馬空港</a></li>
-                <li><a href="https://www.kyu-you.co.jp/">九州郵船</a></li>
-                <li><a href="http://iki-tsushima.com/">壱岐対馬フェリー</a></li>
-                <li><a href="https://jp.airbusan.com/">エアプサン</a></li>
-                <li><a href="http://www.kobee.jp/jp/">未来高速　高速船コビー</a></li>
-                <li><a href="http://intlkr.daea.com/">大亜高速海運「オーシャンフラワー」</a></li>
+                <li><a href="https://www.ana.co.jp/" class="Link1">ANA</a></li>
+                <li><a href="http://tsushima-airport.co.jp/" class="Link1">対馬空港</a></li>
+                <li><a href="https://www.kyu-you.co.jp/" class="Link1">九州郵船</a></li>
+                <li><a href="http://iki-tsushima.com/" class="Link1">壱岐対馬フェリー</a></li>
+                <li><a href="https://jp.airbusan.com/" class="Link1">エアプサン</a></li>
+                <li><a href="http://www.kobee.jp/jp/" class="Link1">未来高速　高速船コビー</a></li>
+                <li><a href="http://intlkr.daea.com/" class="Link1">大亜高速海運「オーシャンフラワー」</a></li>
               </ul>
           </div>
         </section>
@@ -101,18 +102,20 @@
           <h3>参加日別オススメ経路</h3>
           <h5 class="MessageContent">6月30日(金)</h5>
           <br><br>
-          <figure id="0630Route">
-            <img src="Pictures/Traffic/0630Route.jpg" align="left">
-            <a href="Files/Traffic/20170322_FW理想のルート.pdf">フィールドワーク理想のルートpdf</a>
-            <p></p>
-          </figure>
+          <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <img src="Pictures/Traffic/0630Route.jpg" align="left">
+                <a href="Files/Traffic/20170322_FW理想のルート.pdf" class="Link1">フィールドワーク理想のルートpdf</a>
+            </div>
+          </div>
           <h5 class="MessageContent">7月1日(土)</h5>
           <br><br>
-          <figure id="0701Route">
-            <img src="Pictures/Traffic/0701Route.jpg">
-            <a href="Files/Traffic/20170322_2日目参加者理想のルート.pdf">２日目理想のルートpdf</a>
-            <p></p>
-          </figure>
+          <div class="row">
+            <div class="col-md-12 col-sm-12">
+              <img src="Pictures/Traffic/0701Route.jpg">
+              <a href="Files/Traffic/20170322_2日目参加者理想のルート.pdf" class="Link1">２日目理想のルートpdf</a>
+            </div>
+          </div>
         </section>
 
         <section id="article4">
