--- a/fieldWork.html
+++ b/fieldWork.html
@@ -93,8 +93,8 @@
                           </p>
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-md-12"><img class="double" src="Pictures/Prepare/FieldWork/FieldWork0102.jpg" alt="写真"></div>
+                      <div class="row" align="center">
+                        <div class="col-md-12 col-lg-12"><img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork0102.jpg" alt="写真"></div>
                       </div>
 
                       <!-- フィールドワーク03 -->
