修正案の１０pまで直した。

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a>エントリーフォーム</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
           </ul>
         </div>
 
@@ -44,10 +44,10 @@
           <h2>menu</h2>
           <ul>
             <li><a href="#" class="scroll">ページトップ</a></li>
-            <li><a href="#article1" class="scroll">伊藤先生メッセージ</a></li>
+            <li><a href="#article1" class="scroll">研究会主査より</a></li>
             <li><a href="#article2" class="scroll">現地コーディネーターより</a></li>
             <li><a href="#article3" class="scroll">実行委員より</a></li>
-            <li><a href="#article4" class="scroll">会の概要・目的</a></li>
+            <li><a href="#article4" class="scroll">市民共創知研究会とは</a></li>
             <li><a href="#article5" class="scroll">スケジュール(案)</a></li>
             <li><a href="#article6" class="scroll">みらいらぼの紹介</a></li>
           </ul>
@@ -74,14 +74,15 @@
           <h1>研究会について</h1>
 
           <section id="article1">
-            <h3>伊藤先生メッセージ</h3>
+            <h3>研究会主査より</h3>
             <section class="comment_item">
               <div class="row">
                   <div class="col-md-6 col-sm-6">
                   <img src="Pictures/Person/takayuki201204.jpg" alt="写真" class="img-responsive">
                 </div>
                 <div class="col-md-6 col-sm-6">
-                  <h5 class="Emphasis3"><span>名古屋工業大学</span><br>伊藤 孝行</h5>
+                  <p>名古屋工業大学</p>
+                  <h5 class="Emphasis3"><span>伊藤 孝行</span></h5><br>
                 </div>
               </div>
               <div class="item_txt">
@@ -118,7 +119,8 @@
                     <img src="Pictures/noimage3.gif" alt="写真">
                 </div>
                 <div class="col-md-6 col-sm-6">
-                  <h5 class="Emphasis3"><span>所属</span><br>名前</h5>
+                  <p>前・対馬市島おこし協働隊</p>
+                  <h5 class="Emphasis3"><span>佐藤 雄二</span></h5><br>
                 </div>
               </div>
               <div class="item_txt">
@@ -137,7 +139,9 @@
                     <img src="Pictures/Person/Ikeda.jpg" alt="写真">
                 </div>
                 <div class="col-md-6 col-sm-6">
-                  <h5 class="Emphasis3"><span>第2回研究会　実行委員長</span><br>池田　晃一</h5>
+                  <p>第2回研究会　実行委員長</p>
+                  <p>(株)岡村製作所</p>
+                  <h5 class="Emphasis3"><span>池田　晃一</span></h5><br>
                 </div>
               </div>
               <div class="item_txt">
@@ -156,14 +160,14 @@
                         <p class="txt">
                           研究者や技術者が地域の問題と向き合い、実践的に解決していくにはどうしたらいいのでしょうか。近年関心が高まっているテーマということで、本研究会のほかにもたくさんの試みがおこなわれています。
                           そんな中、私たち、市民共創知研究会のメンバーが大切にしているのは、結論が出るまで熟考したり、足並みをそろえることを過度に意識するのではなく、「できるところからやってみる」という姿勢です。
-                          <br>
+                          <br><br>
                           この第2回研究会自体も、「さらなる共創の場をつくりたい」という第1回参加者の情熱からデザインされています。
                           問題解決の方法論や、意思決定支援といったテクノロジーでまちを活性化しようとしている研究者、市や地元関係者との密な関係を模索している島おこし協働隊の方、Web技術で研究会の魅力を発信する学生の面々。
                           いろいろな方が「共創が生まれる最高の3日間を」という目標のもと、持っているものを惜しみなくつぎ込んでプログラムしてきました。
-                          <br>
+                          <br><br>
                           そんな場に欠かせないのは、まちのことを真剣に考え、何かできないかと思っているみなさんです。特別な技術や資格がなくても、まちに対してできることはたくさんあります。
                           この機会にまちに対してはたらきかけるきっかけをつかんでいただければ幸いです。
-                          <br>
+                          <br><br>
                           実行委員一同、みなさんと対馬で会えることを楽しみにしております。
                         </p>
                   </div>
@@ -171,34 +175,37 @@
           </section>
 
           <section id="article4">
-            <h3>会の概要・目的</h3>
+            <h3>市民共創知研究会とは</h3>
             <figure>
               <img src="Pictures/noimage2.jpg">
               <p>
                 市民共創知研究会は、その名の通り、わたしたち市民が抱えている問題に対してみんなで対話し、解決策を見つけ出し、実践的に解いていくことを目的としています。
-                <br>
+                <br><br>
                 実際に、いろいろな地域にうかがい、対話をさせていくときに私たちが大事にしているのが抽象的な議論と実践的な問題解決のバランスを取ることです。
-                <br>
+                <br><br>
                 学者や技術者は問題を抽象化し、いずれの場合にも対応できるような枠組みや技術を確立しようとします。その結果は研究成果や特許として全人類で共有可能ですが、個々の細かな問題を解決するには使いにくかったりします。
-                <br>
+                <br><br>
                 一方、本当に問題に直面している人たちは、今すぐにでも使える技術や知識を求めます。しかし、その場しのぎの解決策を選択しがちで、たとえうまい結果に至ったとしても、その技術や方法を継承したり、ほかの人と共有することには無関心なこともあります。
-                <br>
+                <br><br>
                 私たちは「共創」を考えるとき、こうした抽象と実践のどちらも欠かすことができないと考えています。一見、正反対のこの二つを結びつけるのが「共通善」です。「地域の明るい未来をつくる」とか「高校生に豊かな学びの場を」といった私たちが抱えている細かな課題を包む、大きな課題がこれにあたります。
-                <br>
+                <br><br>
                 「共通善」を設定したら、各人がとにかくできることから手を動かして取り組んでみることが重要です。倫理的、法規的な問題がなければ、とにかくやってみることです。相手の出方を探るとか、責任を分担することばかりに時間を使っていても、問題解決は一歩も進みません。実践的な活動こそが問題を打破していきます。
-                <br>
+                <br><br>
                 ただし、その活動をただやりっぱなしではなく、しっかりと記録し、分析することも重要です。どうやって問題は解決されたのか、どうやってコミュニティが活性化したのか。そこで起きていたことの記録から、なにか特徴や方法が取り出せるかもしれません。問題解決のための基礎技術や、抽象的な枠組みが発見できれば、再び現れた問題に挑むときに有効な武器となるでしょう。
-                <br>
+                <br><br>
                 私たちはフィールドワークを含め、はいっていく地域の予習・体験を重視し、参加者が抱く「借りてきた問題感」を解消するとともに、「みらいらぼ」のようなプロジェクトの継続を支援するシステムなどを用いて地域の問題に寄り添っていこうとしています。
-                <br>
+                <br><br>
                 地域が抱える諸々の問題に対して「共通善」を掲げ、実践と抽象のバランスを意識しながら地域の方とともに取り組んでいくのが市民共創知研究会だといえます。
               </p>
-              <a href="Files/About/20170324_研究会のしおり.pdf" class="Link1">研究会のしおり</a>
+              <a href="http://www.itolab.nitech.ac.jp/SIG-CCI/" class="Link1" target="_blank">市民共創知研究会Web</a>
             </figure>
           </section>
 
           <section id="article5">
-            <h3>スケジュール(案)</h3>
+            <h3>研究会スケジュール</h3>
+            <p>
+              第２回研究会は６月３０日、７月１日、７月２日の３日間にわたり開催されます。
+            </p>
             <!-- 6月30日 -->
             <h4>6月30日(金)</h4>
             <div class="row" align="center">
