--- a/fieldWork.html
+++ b/fieldWork.html
@@ -33,7 +33,7 @@
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
-              <li><a>エントリーフォーム</a></li>
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
             </ul>
           </div>
 
@@ -73,11 +73,13 @@
       <article>
           <section>
             <h1>フィールドワーク紹介</h1>
-            <section class="comment_item">
+            <section class="comment_item_fw">
+                <img class="img-responsive" id="fw_table" src="Pictures/Prepare/FieldWork/フィールドワーク行程.jpg" alt="写真">
+
                     <div class="container show-grid">
                       <!-- フィールドワーク01,02 -->
                       <div class="row" id="article1">
-                        <div class="col-md-6 double-fw-Text">
+                        <div class="col-md-6 col-lg-6 double-fw-Text">
                           <h4>フィールドワーク1　対馬の自然環境保全(全日)コース</h4>
                           <p class="item_txt">
                             フェリーで来島された方は徒歩でふれあい処に集まってください。その後、福岡1便、長崎1便の飛行機で来島された方を迎えに対馬空港に向かいます。
@@ -85,34 +87,34 @@
                             午後は半日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
                           </p>
                         </div>
-                        <div class="col-md-6 double-fw-Text">
+                        <div class="col-md-6 col-lg-6 double-fw-Text">
                           <h4>フィールドワーク2　対馬の自然環境保全(半日)コース</h4>
                           <p class="item_txt">
                             福岡2便、長崎2便の飛行機で来島の方は対馬空港までお迎えに上がります。ジェットフォイルで来島の方は徒歩でふれあい処に集まってください。
                             ふれあい処で対馬の郷土料理を味わった後、全日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
                           </p>
                         </div>
-                      </div>
-                      <div class="row" align="center">
-                        <div class="col-md-12 col-lg-12"><img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork0102.jpg" alt="写真"></div>
+                      </div><!-- div class="row" id="article1"> -->
+                      <div class="row" align="right">
+                        <div class="col-md-8 col-lg-8"><img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork0102.jpg" alt="写真"></div>
                       </div>
 
                       <!-- フィールドワーク03 -->
                       <div class="row" id="article2">
                         <h4>フィールドワーク3　対馬の観光ガイド・史跡コース</h4>
-                        <div class="col-md-6 double-fw-Text">
+                        <div class="col-md-6 col-lg-6 double-fw-Text">
                           <p class="item_txt">
                             ＜晴天時＞奈良時代の朝鮮式山城と明治時代の砲台が残る金田城をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、金田城に移動、城山を登ります。下山後は厳原中心部で解散となります。
                           </p>
                         </div>
-                        <div class="col-md-6 double-fw-Text">
+                        <div class="col-md-6 col-lg-offset-0.5 col-lg-5.5 double-fw-Text">
                           <p class="item_txt">
                             ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多津美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
                           </p>
                         </div>
                       </div>
                       <div class="row" align="left">
-                        <div class="col-md-12"><img class="double" src="Pictures/Prepare/FieldWork/FieldWork03.jpg" alt="写真"></div>
+                        <div class="col-md-10 col-lg-10"><img class="double" src="Pictures/Prepare/FieldWork/FieldWork03.jpg" alt="写真"></div>
                       </div>
 
                       <!-- フィールドワーク04 -->
@@ -125,7 +127,7 @@
                         </div>
                       </div>
                       <div class="row" align="center" >
-                        <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork04.jpg" alt="写真"></div>
+                        <div class="col-lg-9 col-md-9"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork04.jpg" alt="写真"></div>
                       </div>
 
                     <!-- フィールドワーク05 -->
@@ -140,7 +142,7 @@
                       </div>
                     </div>
                     <div class="row" align="center">
-                      <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork05.jpg" alt="写真"></div>
+                      <div class="col-lg-8 col-md-8"><img class="single" src="Pictures/Prepare/FieldWork/FieldWork05.jpg" alt="写真"></div>
                     </div>
 
                     <!-- フィールドワーク03~05 オプション -->
@@ -152,8 +154,8 @@
                         </p>
                       </div>
                     </div>
-                    <div class="row" align="center">
-                      <div class="col-lg-12 col-md-12"><img class="single" src="Pictures/Prepare/FieldWork/FieldWorkAMOption.jpg" alt="写真"></div>
+                    <div class="row" align="left">
+                      <div class="col-lg-10 col-md-10"><img class="single" src="Pictures/Prepare/FieldWork/FieldWorkAMOption.jpg" alt="写真"></div>
                     </div>
 
                   </div><!-- <div class="container show-grid"> -->
