--- a/prepare.html
+++ b/prepare.html
@@ -33,7 +33,7 @@
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
-              <li><a>エントリーフォーム</a></li>
+              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
             </ul>
           </div>
 
@@ -78,8 +78,11 @@
 
           <section id="article1">
             <h3>対馬の概要</h3>
+
             <figure>
+              <br><br><br>
               <img src="Pictures/Prepare/TsushimaMap.jpg">
+              <br><br><br>
               <p>
                 長崎県対馬市(2004年に6町合併で発足)</br>
                 人口：30,664人(2017年2月現在)</br>
@@ -96,14 +99,16 @@
 
           <section id="article2">
             <h3>たしかに宝の山だった　～実行委員会対馬視察日記～</h3>
+            <br>
             <div class="diary_head">
               <p class="diary_txt">
                 3月2日から4日にかけて第2回市民共創知研究会実行委員5名で対馬の視察、あいさつに行ってきました。ここではその時の様子を旅行記形式でお届けします。対馬行きを検討されているみなさんの参考になれば幸いです。
               </p>
             </div>
+            <br>
             <div class="accordion">
               <div class="ac-content">
-                <input id="ac-cap1" type="checkbox">
+                <input id="ac-cap1" type="checkbox" checked="checked">
                 <label for="ac-cap1" id="article2_1">
                   3月2日(木)
                   <span class="glyphicon glyphicon-chevron-right"></span>
