--- a/index.html
+++ b/index.html
@@ -133,31 +133,53 @@
       <div class="col-xs-12 col-md-4 col-md-push-8">
         <h3>目次</h3>
         <ul>
-          <li><a href="#news" class="scroll">第2回研究会概要</a></li>
-          <li><a href="#photoes" class="scroll">第2回研究会フォトライブラリー</a></li>
-          <li><a href="#timetable" class="scroll">タイムテーブル</a></li>
-          <li><a href="#sessions" class="scroll">セッション分け</a></li>
+          <li><a href="about.html">研究会について</a></li>
+          <li><a href="prepare.html">対馬についての予習</a></li>
+          <li><a href="fieldWork.html">フィールドワーク</a></li>
+          <li><a href="traffic.html">交通案内</a></li>
+          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
         </ul>
         <!--h3>過去の研究会</h3-->
-        <h3>外部リンク</h3>
+        <h3>関連</h3>
         <ul>
           <li><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html" target="_blank">第1回市民共創知研究会@岩手県遠野市 遠野ふるさと村</a></li>
           <li><a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
-          <li><a href="https://mirailab-tushima.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
+          <li><a href="https://tsushimap.herokuapp.com/" target="_blank" >TsushiMAP(つしまっぷ)</a></li>
+          <li><a href="https://www.facebook.com/groups/140921016407990/" target="_blank" >Facebookページ</a></li>
         </ul>
 
-        <h3>新着情報</h3>
-        <table class="table table-condensed">
-          <tr><th>Date</th><th>Contents</th></tr>
-          <tr>
-            <td>2017/02/20</td>
-            <td>フォトライブラリー更新</td>
-          </tr>
-        </table>
+        <h3>ダウンロード</h3>
+        <!-- Split button -->
+        <!-- 研究会のしおり -->
+        <div class="btn-group">
+          <button type="button" class="btn btn-default" onclick="window.open('Files/Index/20170324_研究会のしおり.pdf')">研究会のしおり</button>
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="Files/About/20170324_研究会のしおり.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/About/20170324_研究会のしおり.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
+          </ul>
+        </div>
+        <br><br>
+        <!-- 論文募集要項 -->
+        <div class="btn-group">
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170330_CFP案.pdf')">論文募集要項　</button>
+          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+            <span class="caret"></span>
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <ul class="dropdown-menu">
+            <li><a href="Files/Index/20170330_CFP案.pdf" target="_blank">オープン</a></li>
+            <li><a href="Files/Index/20170330_CFP案.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
+          </ul>
+        </div>
       </div>
       <!-- 右メニュー終わり -->
       <div class="col-xs-12 col-md-8 col-md-pull-4">
         <div class="row">
+          <!--
           <div class="col-xs-12" id="articletop">
             <h3>第一回研究会まとめ</h3>
             <p>第1回研究会お疲れ様でした．</p>
@@ -167,24 +189,28 @@
               <li>市民共創プロジェクト: <a href="https://mirai-making.herokuapp.com" target="_blank">みらいらぼ</a></li>
             </ul>
           </div>
-
+        -->
           <div class="col-xs-12" id="news">
-            <h3>第２会研究会概要</h3>
-            <h5 class="Emphasis2">みらいらぼin対馬　～対馬の宝と向かい合う3日間</h5>
+              <h5 class="Emphasis2">
+              みらいらぼin対馬
+            ～対馬の宝と向かい合う3日間
+            </h5>
+          <!--</div>-->
             <p>私たち市民共創知研究会は、地域がかかえている問題に、市民の方々と一緒に取り組み、解決していくための場をつくるために活動をしています。
               第2回の舞台は長崎県対馬市。国境の離島に乗り込み、地域を知り、課題について対話します。</p>
             <p>研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。</p>
             <p>みなさんのご参加をお待ちしています。</p>
             <div class="overview">
+              <br>
               <dt>名称：</dt><dd>人工知能学会 市民共創知研究会　第2回研究会</dd>
               <dt>会期：</dt><dd>2017年6月30日(金)～7月2日(日)</dd>
               <dt>会場：</dt><dd>長崎県　対馬市　西山寺</dd>
               <dt>主催：</dt><dd>人工知能学会　市民共創知研究会</dd>
               <dt>後援：</dt><dd>対馬市、(一社)対馬観光物産協会</dd>
             </div>
-          </div>
+          </div><!-- <div class="col-xs-12" id="news"> -->
+        </div><!--   <div class="row"> -->
 
-        </div>
       </div>
     </div>
   </div>
